tests/errors/sample-table-unaligned.spcasmtest
org $56
db $aa

sampletable noalign
brr "../yoshi.wav": 0-20
